Fix the dang footer
It was messed up.

--- a/style/main.css
+++ b/style/main.css
@@ -420,7 +420,7 @@ blockquote {
   cursor: default; }
 
 .footer {
-  height: 24px;
+  height: 40px;
   padding-top: 9px;
   padding-bottom: 9px;
   color: white;
