--- a/style/partials/_footer.scss
+++ b/style/partials/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    height: 24px;
+    height: 40px;
     padding-top: 9px;
     padding-bottom: 9px;
     color: white;
